fix: adjusted configuration

--- a/templates/pages/redirect.html
+++ b/templates/pages/redirect.html
@@ -1,49 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/svg+xml" href="https://avatars.githubusercontent.com/u/44125424?s=400&u=cc39aa39471d5edc395d5a43ea58d2f7c641d937&v=4" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="theme-color" media="(prefers-color-scheme: light)" content="white" />
-		<meta name="theme-color" media="(prefers-color-scheme: dark)" content="black" />
-		<link rel="manifest" href="{MediaRoute}/manifest.json" />
-		<title>MicroClub - Redirect</title>
-		<style>
-			body {
-
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				height: 100vh;
-				margin: 0;
-				background: linear-gradient(to bottom, white, rgb(173, 209, 230));
-			}
-			.logo {
-				max-width: 200px;
-				width: 100%;
-				animation: pump 1s ease-in-out infinite alternate both;
-				transform-origin: center;
-			}
-			@keyframes pump {
-				from {
-					transform: scale(1);
-				}
-				to {
-					transform: scale(1.5);
-				}
-			}
-		</style>
-	</head>
-	<body>
-		<div class="logo">
-			<img width="100%" src="https://avatars.githubusercontent.com/u/44125424?s=400&u=cc39aa39471d5edc395d5a43ea58d2f7c641d937&v=4" alt="Logo" />
-		</div>
-        
-		<script>
-			setTimeout(function () {
-				window.location.href = "https://github.com/MicroClub-USTHB";
-			}, 2500);
-		</script>
-	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="theme-color"
+            media="(prefers-color-scheme: light)"
+            content="white"
+        />
+        <meta
+            name="theme-color"
+            media="(prefers-color-scheme: dark)"
+            content="black"
+        />
+        <link rel="manifest" href="{MediaRoute}/manifest.json" />
+        <title>Awwwwww</title>
+    </head>
+    <body>
+        <script>
+            setTimeout(function () {
+                window.location.href = 'https://github.com/z-sohaib'
+            }, 2500)
+        </script>
+    </body>
 </html>
